--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
     --primario: #016170;
     --secundario: #009393;
     --terciario: #00E0C6;
-    --gris: #efefef;
 }
 
 *{
@@ -17,6 +16,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    background-color: var(--secundario);
 }
 
 .pane {
@@ -25,12 +25,14 @@ body {
   z-index: 5000;
   background-position: bottom right;
   height: calc(100vh - 10px);
+  background-color: white;
 }
 
 header {
     display: flex;
     justify-content: space-between;
-    margin: 10px 115px 30px 100px;
+    margin: 00px 115px 30px 100px;
+    padding-top: 20px;
 }
 
 #header__menu {
@@ -52,7 +54,7 @@ header {
 }
 
 .menu__element:hover{
-    border-bottom: 5px var(--secundario) solid;
+    border-bottom: 5px var(--terciario) solid;
     transition: all 0.1s ease;
 
 }
@@ -77,7 +79,7 @@ header {
     padding-bottom: 15px;
     font-weight: 500;
     font-size: 40px;
-    border-left: 5px var(--secundario) solid;
+    border-left: 5px var(--terciario) solid;
 }
 
 #landing__paragraph {
@@ -85,7 +87,7 @@ header {
     text-justify: inter-word;
     font-size: 18px;
     line-height: 2;
-    border-left: 5px var(--secundario) solid;
+    border-left: 5px var(--terciario) solid;
     padding-left: 10px;
 
 }
@@ -104,7 +106,10 @@ header {
 }
 
 #second__pane {
-    height: 100vh;
+    background-color: white;
+    border-radius: 30px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+
 }
 
 #second__pane__title {
@@ -153,6 +158,11 @@ main {
     margin: 0 auto;
     font-weight: 400;
     font-size: 30px;
+    display: block;
+    width: 78%;
+    text-align: center;
+    padding-bottom: 30px;
+    border-bottom: #00E0C6 solid 5px;
 }
 
 .second__pane__cards {
@@ -177,7 +187,8 @@ main {
 
 .second__pane__cards svg {
     margin: 0 auto;
-    background-color: #009393;
+    background-color: var(--primario);
+    background-color: var(--primario);
     border-radius: 100%;
     width: 100px;
     height: 100px;
