--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,10 @@ header {
 
 }
 
+#mobile__menu {
+    display: none;
+}
+
 #landing {
     font-family: 'Open sans', sans-serif;
     width: calc(100vw - 100px);
@@ -206,7 +210,7 @@ main {
 
 .card__paragraph {
     line-height: 1.5;
-    transition: all 10s ease-in;
+    /* transition: all 10s ease-in; */
 
 }
 
@@ -216,19 +220,57 @@ main {
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 3;
 
 }
 
 @media (max-width: 480px) {
     
     header {
-        padding-left: 25px;
+        padding: 25px;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        background-color: white;
+        z-index: 5;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
     }
 
-    
+
+    #back__menu {
+        position: fixed;
+        top: 0;
+        left: -50vw;
+        transition: all 300ms;
+        background-color: rgba(0, 0, 0, 0.25);
+        height: 100vh;
+        width: 50%;
+        z-index: 50;
+    }
+
     #header__menu {
-      display: none;
+    transition: all 300ms;
+      position: fixed;
+      top: 0;
+      right: -50vw;
+      background-color: rgba(255, 255, 255, 1);
+      height: 100vh;
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      padding: 50px;
+    }
+
+    .menu__element {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #mobile__menu{
+        display: block;
     }
 
     #landing__image {
@@ -278,5 +320,7 @@ main {
     .second__pane__cards{
         margin: auto;
         width: 40px;
+        transition: all 300ms;
+
     }
   }
