--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ header {
 
 }
 
+
 #learn__button{
     justify-content: center;
     padding: 20px;
@@ -139,7 +140,7 @@ main {
     display: flex;
     flex-direction: column;
     margin: 50px;
-    margin-bottom: 1000px;
+    margin-bottom: 100px;
     padding-bottom: 50px;
     /* background-color: var(--secundario); */
 }
@@ -150,6 +151,15 @@ main {
 
 
 #second__pane__description {
+    margin: 0 200px;
+    text-align: justify;
+    font-size: 18px;
+    line-height: 2;
+    margin-bottom: 50px;
+}
+
+#mbsecond__pane__description {
+    display: none;
     margin: 0 200px;
     text-align: justify;
     font-size: 18px;
@@ -235,6 +245,27 @@ main {
 
 }
 
+footer {
+    display: flex;
+    background-color: var(--primario);
+    height: 20rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+
+
+}
+
+#socials {
+    display: flex;
+    margin: auto;
+    justify-content: space-between;
+    align-content: center;
+    width: 20vw;
+}
+
+#socials svg:hover {
+    cursor: pointer;
+}
+
 @media (max-width: 480px) {
     
     header {
@@ -245,7 +276,7 @@ main {
         left: 0;
         background-color: white;
         z-index: 5;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
     }
 
@@ -292,6 +323,7 @@ main {
         margin-left: 0;
         width: 100%;
         justify-content: center;
+        padding: 5px;
     }
 
     #landing__title {
@@ -315,6 +347,11 @@ main {
     }
 
     #second__pane__description {
+        display: none;
+    }
+
+    #mbsecond__pane__description{
+        display: block;
         margin: 0 20px;
         text-align: justify;
         font-size: 18px;
@@ -334,5 +371,13 @@ main {
         width: 40px;
         transition: all 300ms;
 
+    }
+
+    footer{
+        margin-top: 50px
+    }
+
+    #socials {
+        width: 350px;
     }
   }
